test-suite/tests/roundtrip/invalid/semantic/typecheck/bool_constant_in_arith_expr/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/bool_constant_in_arith_expr/bool_constant_in_arith_expr.essence:2:15:
  |
2 | such that 4 + false = x
  |               ^^^^^
Type error:
	Expected: "Number or Enum"
	Got: bool

